--- a/GoldenWayDuties/Views/Taskitems/Index.cshtml
+++ b/GoldenWayDuties/Views/Taskitems/Index.cshtml
@@ -14,18 +14,16 @@ else
     <table class="table table-bordered table-hover">
         <thead>
             <tr>
-                <th>
-                    Taskitem
-                </th>
+                <th>Taskitem</th>
+                <th>Genre</th>
             </tr>
         </thead>
         <tbody>
             @foreach (var item in Model)
             {
                 <tr>
-                    <td>
-                        @Html.ActionLink(item.Name, "Details", new { id = item.Id }, null)
-                    </td>
+                    <td>@Html.ActionLink(item.Name, "Details", new { id = item.Id }, null)</td>
+                    <td>@item.Genre.Id</td>
                 </tr>
             }
         </tbody>
