updating the adding form fix

--- a/GoldenWayDuties/Views/Taskitems/Details.cshtml
+++ b/GoldenWayDuties/Views/Taskitems/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model GoldenWayDuties.ViewModels.RandomTaskitemViewModel
+﻿@model GoldenWayDuties.ViewModels.TaskitemFormViewModel
 @{
     ViewBag.Title = Model.Taskitem.Name;
     Layout = "~/Views/Shared/_Layout.cshtml";
